Fixed Findbugs warnings.